--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
     <properties>
         <datastax.cassandra.client.version>3.1.4</datastax.cassandra.client.version>
         <kafka.version>0.10.2.0-cp1</kafka.version>
+        <junit.version>4.12</junit.version>
         <jdk.version>1.7</jdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -73,11 +74,25 @@
             <version>${datastax.cassandra.client.version}</version>
         </dependency>
         <dependency>
+            <groupId>io.confluent</groupId>
+            <artifactId>kafka-avro-serializer</artifactId>
+            <version>3.2.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>connect-api</artifactId>
             <version>${kafka.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>        
+        
     </dependencies>
 
     <build>
