First end-to-end test for INSERT, UPDATE, and DELETE operations, still a lot of testing to do...

--- a/config/cassandra-sink-quickstart.properties
+++ b/config/cassandra-sink-quickstart.properties
@@ -22,3 +22,6 @@ cassandra.keyspace.name=test_cassandra_sink
 
 auto.create=true
 auto.evolve=true
+
+pk.mode=record_key
+fields.blacklist=table,op_type,op_ts,current_ts,pos
