--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -5,7 +5,7 @@ log4j.appender.stdlog=org.apache.log4j.ConsoleAppender
 log4j.appender.stdlog.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdlog.layout.ConversionPattern=%d{HH:mm:ss} %-5p %-25c{1} :: %m%n
 
-log4j.logger.com.github.castagna.kafka=DEBUG
+log4j.logger.com.github.castagna.kafka=TRACE
 log4j.logger.org.apache.cassandra=DEBUG
 
 log4j.logger.dev=WARN
