--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,13 @@
                </configuration>
             </plugin>
         </plugins>
+        
+    	<resources>
+        	<resource>
+            	<directory>config</directory>
+        	</resource>
+    	</resources>
+
     </build>
 
     <repositories>
